# Student-magment-system-Cpp

./: Analysis.h  CMakeLists.txt  Course.h  README.md  Student.cpp  User.h  admin.cpp  admin.h  courses.txt  ctest.txt  instructor.cpp  instructor.h  instructors.txt  main.cpp  stest.txt  student.h  students.txt
